DOC: Fix dark mode styles (#50936)
* dark mode styles fixed


* Update getting_started.css


* Update doc/source/_static/css/getting_started.css

---------

--- a/doc/source/_static/css/getting_started.css
+++ b/doc/source/_static/css/getting_started.css
@@ -236,11 +236,11 @@ ul.task-bullet > li > p:first-child {
 
 .tutorial-card .card-header {
   cursor: pointer;
-  background-color: white;
+  background-color: transparent;
 }
 
 .tutorial-card .card-body {
-  background-color: #F0F0F0;
+  background-color: transparent;
 }
 
 .tutorial-card .badge {
